--- a/views/index.haml
+++ b/views/index.haml
@@ -12,7 +12,7 @@
   .container
     .row
       .span8.offset2.feature
-        .h1 Gakko 2013
+        %h1 Gakko 2013
         .row
           .span6.offset1.description
             %p Sign up for our email list.
