--- a/views/index.haml
+++ b/views/index.haml
@@ -22,7 +22,7 @@
         %form{:action => "/signup"}
           %input#email{:name => "email", :type => "text", :placeholder => "Email me about the project"}
           %input{:type => "submit", :value => "Subscribe"}
-    %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"}
-    %script{:src => "/js/vendor/bootstrap.min.js"}
-    %script{:src => "/js/plugins.js"}
-    %script{:src => "/js/main.js"}
+    %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
+    %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
+    %script{:src => "/js/plugins.js", :type => "text/javascript"}
+    %script{:src => "/js/main.js", :type => "text/javascript"}
