--- a/views/index.haml
+++ b/views/index.haml
@@ -24,5 +24,6 @@
           %input{:type => "submit", :value => "Subscribe"}
     %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
     %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
+    %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
     %script{:src => "/js/plugins.js", :type => "text/javascript"}
     %script{:src => "/js/main.js", :type => "text/javascript"}
