--- a/views/index.haml
+++ b/views/index.haml
@@ -25,4 +25,4 @@
   %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
   %script{:src => "/js/plugins.js", :type => "text/javascript"}
-  %script{:src => "/js/main.js", :type => "text/javascript"}
+  %script{:src => "/js/index.js", :type => "text/javascript"}
