--- a/views/index.haml
+++ b/views/index.haml
@@ -10,7 +10,7 @@
 %body
   %header
     %hgroup
-      %img{:src => "img/logo.png"}
+      %img#logo{:src => "img/logo.png"}
     #mc_embed_signup
       %form.validate{:action => "/signup"}
         #success{:style => "display:none"} Thank you!  You're on the list.
