--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,23 +55,22 @@ body {
 }
 
 header {
-  left: 50%;
-  top: 50%;
-  width: 440px;
+  left: 30%;
+  top: 40%;
   margin-top: -100px;
   margin-left: -220px;
   overflow: hidden;
   position: absolute;
 }
 
+hgroup {
+  margin-bottom: 40px;
+}
+
 form {
   float: left;
   width: 420px;
-  padding: 10px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: inset 0px 1px 2px 2px rgba(0, 0, 0, .3);
-  box-shadow: inset 0px 1px 2px 2px rgba(0, 0, 0, .3);
+  padding: 10px 10px 10px 60px;
 }
 
 input, textarea {  
