--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@
       %a#home-link{:href => "#home"} Home
       %a#about-link{:href => "#about"} About
       %a#team-link{:href => "#team"} Team
-  %header.content#home
+  %header#home
     %hgroup
       %img#logo{:src => "img/logo.png"}
     #mc_embed_signup
@@ -28,6 +28,15 @@
           %span.hide-text Submit
   #about.panel
     .content
+      .subcont
+        %img.minilogo{:src => "img/minilogo.png"}
+      #concept.subcont
+        %h1 A new examination of education
+        %p GAKKO is a summer project that brings together creative college students from the world to design and execute a summer school in Japan. Through GAKKO we are trying to question the current paradigm of education and suggest a new approach to learning. We think school should be a more creative, motivating, and inspiring place where people are happy to learn and engaged in teaching. We want the world to know that we care about education; at GAKKO we question learning. 
+
+      #gakko2012.subcont
+        %h1 GAKKO2012 in NAOSHIMA, JAPAN
+        %p Summer 2012, the first GAKKO took place in Naoshima, Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and execute a summer school from sratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place from 8/4 to 8/9 in Naoshima. We invited 6 inspiring adults to each teach a class at GAKKO. We still keep in touch with everyone who came to the camp. It was a lot of fun. 
   #team.panel
     .content
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
