--- a/views/index.haml
+++ b/views/index.haml
@@ -12,13 +12,13 @@
     #menu
       %a#home-logo{:href => "#home"}
         %img{:src => "img/titlelogo.png"}
-      %a#home-link{:href => "#home"} Home
-      %a#about-link{:href => "#about"} About
-      %a#team-link{:href => "#team"} Team
+      %a#home-link{:href => "#home"} Home 
+      %a#about-link{:href => "#about"} About 
+      %a#team-link{:href => "#team"} Team 
       %a#apply-link{:href => "#apply"} Apply
   %header#home
     %hgroup
-      %img#logo{:src => "img/logo.png"}
+      %img#logo{:src => "img/logohover.png"}
     #mc_embed_signup
       %form.validate{:action => "/signup"}
         #success{:style => "display:none"} Thank you!  You're on the list.
@@ -33,13 +33,16 @@
     .content
       .subcont
         %img.minilogo{:src => "img/minilogo.png"}
-      #concept.subcont
-        %h2 A new examination of education
+      #concept.asubcont
+        %h2 NEW EXAMINATION OF EDUCATION
         %p GAKKO is a summer project that brings together creative college students from the world to design and execute a summer school in Japan. Through GAKKO we are trying to question the current paradigm of education and suggest a new approach to learning. We think school should be a more creative, motivating, and inspiring place where people are happy to learn and engaged in teaching. We want the world to know that we care about education; at GAKKO we question learning. 
 
-      #gakko2012.subcont
+      #gakko2012.asubcont.hide
         %h2 GAKKO2012 in NAOSHIMA, JAPAN
         %p Summer 2012, the first GAKKO took place in Naoshima, Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and execute a summer school from sratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place from 8/4 to 8/9 in Naoshima. We invited 6 inspiring adults to each teach a class at GAKKO. We still keep in touch with everyone who came to the camp. It was a lot of fun. 
+      %br
+      %a#next{:href => "#about"} next 
+
   #team.panel
     .content
       #board.subcont
@@ -75,9 +78,10 @@
             %p
   #apply.panel
     .content
-      %h1 APPLY NOW
-      %h2 GAKKO 2013, 7/24 - 8/10 in Japan
-      %p GAKKO team for GAKKO 2013 will arrive in Tokyo on 7/24 and will be there for 2 weeks to prepare for the camp. This will include developing the program, meeting with the sponsors, and bonding with the team operating in Japan. Then 
+      %h1 GAKKO 2013 APPLICATION
+      %h2 GAKKO 2013: 7/24 - 8/10 in Japan
+      %p GAKKO team for GAKKO 2013 will arrive in Tokyo on 7/24 and will be there for 2 weeks to prepare for the camp. This will include developing the program, meeting with the sponsors, and bonding with the team operating in Japan. After the 2 weeks of preperation, team will move to SHODOSHIMA where we will execute a week long summer school for high school students. 
+      %h2 GO TO APPLICATION. 
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
