--- a/views/index.haml
+++ b/views/index.haml
@@ -41,7 +41,10 @@
         %h2 GAKKO2012 in NAOSHIMA, JAPAN
         %p Summer 2012, the first GAKKO took place in Naoshima, Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and execute a summer school from sratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place from 8/4 to 8/9 in Naoshima. We invited 6 inspiring adults to each teach a class at GAKKO. We still keep in touch with everyone who came to the camp. It was a lot of fun. 
       %br
-      %a#next{:href => "#about"} next 
+      %a#previous.button{:href => "#about"} <<
+      %a#id1.button.selected{:href => "#about"} 1
+      %a#id2.button{:href => "#about"} 2
+      %a#next.button{:href => "#about"} >> 
 
   #team.panel
     .content
