--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,6 +52,8 @@ body {
   color: #fff;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
+  width: 100%;
+  overflow: hidden;
 }
 
 .shadow {
@@ -79,9 +81,9 @@ body {
 
 .navbar {
   overflow: hidden;
-  padding: 10px 20%;
+  padding: 10px 20px;
   top: 0;
-  width: 20000px;
+  width: 99%;
   z-index: 99999;
   background-color: black;
   height: 30px;
@@ -100,24 +102,25 @@ body {
   margin-top: -2px;
 }
 
-#menu a:last-child {
-  margin-right: 0px;
-}
-
 #menu a {
   color: white;
   text-decoration: none;
   font-weight: bold;
   margin-right: 25px;
+  float: right;
 }
 
 #menu a:hover {
   text-decoration: underline;
 }
 
+#menu a#home-logo {
+  float: left;
+}
+
 header {
   left: 30%;
-  top: 40%;
+  top: 30%;
   margin-top: -100px;
   margin-left: -220px;
   overflow: hidden;
@@ -174,15 +177,12 @@ input, textarea {
 #success {
   float: left;
   padding: 11px 10px 9px 20px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
   outline: 0;
   width: 328px;
   height: 20px;
-  font-size: 16px;
-  color: #9e9f9f;
-  font-weight: normal;
-  background: white;
+  font-size: 20px;
+  color: #A51D21;
+  font-weight: bold;
   font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   line-height: 16px;
 }
@@ -205,7 +205,7 @@ img {
   color: #423A36;
   font-size: 18px;
   position: absolute;
-  top: 20%;
+  top: 15%;
   padding: 30px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -258,11 +258,22 @@ h1 {
 }
 
 .content .subcont {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .content .subcont:last-child {
   margin-bottom: 0;
+}
+
+.button {
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+}
+
+.button.selected {
+  color: #a51d21;
 }
 
 .panel{
