--- a/views/index.haml
+++ b/views/index.haml
@@ -34,7 +34,7 @@
     #news
       %h1
         %em.handle
-          @gakko2013
+          @gakko2013:
         .tweet
   #about.panel
     .content
