--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,10 +128,19 @@ header {
   position: absolute;
   margin-top: 100px;
   margin-left: 60px;
+  background: rgba(255, 255, 255, .5);
+  color: #513e37;
+  font-size: 18px;
+  position: absolute;
+  padding: 20px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 
 #news h1 {
+  color: #513e37;
   font-size: 16px;
+  margin-bottom: 0;
 }
 
 .tweet {
