--- a/views/index.haml
+++ b/views/index.haml
@@ -13,9 +13,13 @@
     #menu
       %a#home-logo{:href => "#home"}
         %img{:src => "img/titlelogo2.png", :height => "20px", :width => "75px"}
+      %a#twitter-link{:href => "http://twitter.com/gakko2012"}
+        %img{:src => "img/twitter.png"}
+      %a#facebook-link{:href => "http://facebook.com/gakkoproject"}
+        %img{:src => "img/facebook.png"}
       %a#apply-link{:href => "#apply"} APPLY
       %a#about-link{:href => "#about"} ABOUT
-      %a#home-link{:href => "#home"} HOME  
+      %a#home-link{:href => "#home"} HOME
 
   %header#home
     %hgroup
@@ -34,7 +38,7 @@
     #news
       %h1
         %em.handle
-          @gakko2012:
+          Follow @GAKKO2012 on twitter:
         .tweet
   #about.panel
     .content
@@ -60,7 +64,8 @@
       %h1 GAKKO 2013 APPLICATION
       %h2 GAKKO 2013: 7/24 - 8/10 in Japan
       %p GAKKO team for GAKKO 2013 will arrive in Tokyo on 7/24 and will be there for 2 weeks to prepare for the camp. This will include developing the program, meeting with the sponsors, and bonding with the team operating in Japan. After the 2 weeks of preperation, team will move to SHODOSHIMA where we will execute a week long summer school for high school students. 
-      %h2 GO TO APPLICATION.
+      %a{:href => "https://docs.google.com/spreadsheet/viewform?formkey=dFZ3clBVMVFsLXhHeUVCTm51NGY0aWc6MQ"}
+        %h2 APPLICATION
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
