--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,8 +118,8 @@ body {
 }
 
 #twitter-link img, #facebook-link img {
-  height: 30px;
   margin-top: -5px;
+  margin-right: 10px;
 }
 
 header {
@@ -228,7 +228,10 @@ input, textarea {
   font-weight: normal;
   background: white;
   font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  line-height: 16px;
+  line-height: 16px;  
+  -moz-box-shadow:    inset 0 0 5px #000000;
+  -webkit-box-shadow: inset 0 0 5px #000000;
+  box-shadow:         inset 0 0 5px #000000;
 }
 
 .hide-text {
