--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,9 +117,18 @@ body {
   float: left;
 }
 
-#twitter-link img, #facebook-link img {
+#menu a#facebook-link {
+  margin-right: 20px;
+}
+
+#twitter-link img {
   margin-top: -5px;
   margin-right: 10px;
+}
+
+#facebook-link img {
+  margin-top: -5px;
+  margin-right: 0px;
 }
 
 header {
