--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 !!!
 %head
-  %title Gakko
+  %title GAKKO
   %meta{:charset => "utf-8"}
   %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
   %link{:rel => "stylesheet", :href => "/css/normalize.css"}
@@ -27,7 +27,7 @@
     #mc_embed_signup
       %form.validate{:action => "/signup"}
         #success{:style => "display:none"} Thank you for your signup!
-        %input#mce-EMAIL.required.email{:value => "", :name => "EMAIL", :placeholder => "Enter your email for Gakko 2013 updates!"}
+        %input#mce-EMAIL.required.email{:value => "", :name => "EMAIL", :placeholder => "Enter your email for GAKKO 2013 updates!"}
         #mce-responses.clear
           .response#mce-error-response{:style => "display: none;"}
           .response#mce-success-response{:style => "display: none;"}
