corrected text contents in haml

--- a/views/index.haml
+++ b/views/index.haml
@@ -45,12 +45,12 @@
       .subcont
         %img.minilogo{:src => "img/minilogo.png"}
       #concept.asubcont
-        %h2 NEW EXAMINATION OF EDUCATION
-        %p GAKKO is a summer project that brings together creative college students from the world to design and execute a summer school in Japan. Through GAKKO we are trying to question the current paradigm of education and suggest a new approach to learning. We think school should be a more creative, motivating, and inspiring place where people are happy to learn and engaged in teaching. We want the world to know that we care about education; at GAKKO we question learning. 
+        %h2 RE-EXAMINING EDUCATION
+        %p GAKKO is a summer project that brings together creative college students from around the world to design and conduct a week-long school in Japan. Through GAKKO we are trying to question the current paradigm of education and suggest a new approach to learning. We think school should be a more creative, motivating, and inspiring place where people are happy to learn and engaged in teaching. We want the world to know that we care about education; at GAKKO we question learning. 
 
       #gakko2012.asubcont.hide
-        %h2 GAKKO2012 in NAOSHIMA, JAPAN
-        %p Summer 2012, the first GAKKO took place in Naoshima, Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and execute a summer school from sratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place from 8/4 to 8/9 in Naoshima. We invited 6 inspiring adults to each teach a class at GAKKO. We still keep in touch with everyone who came to the camp. It was a lot of fun. 
+        %h2 GAKKO 2012 in NAOSHIMA, JAPAN
+        %p In the summer of 2012, GAKKO launched its inaugural camp on NAOSHIMA Island in Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and conduct a school from scratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place in the beginning of August on Naoshima. Kohai and sempai have remained in close contact since our emotional closing ceremony at the end of the week. We can only hope that the magic of the first year will return to us next summer!. 
       %br
       %a#previous.button{:href => "#about"}
         %i.icon-arrow-left
@@ -62,10 +62,13 @@
   #apply.panel
     .content
       %h1 GAKKO 2013 APPLICATION
-      %h2 GAKKO 2013: 7/24 - 8/10 in Japan
-      %p GAKKO team for GAKKO 2013 will arrive in Tokyo on 7/24 and will be there for 2 weeks to prepare for the camp. This will include developing the program, meeting with the sponsors, and bonding with the team operating in Japan. After the 2 weeks of preperation, team will move to SHODOSHIMA where we will execute a week long summer school for high school students. 
+      %h2 GAKKO 2013 : 7/24 - 8/10 in JAPAN 
+      %p This team for GAKKO 2013 will gather together in Tokyo for two weeks of program preparation on 7/24. During this time, the curiculum will be sharpened, activities will be hammered out, meetings with sponsors and guest teachers will take place. Above all, these two weeks are a time for the team to develop into the well-oiled machine that made GAKKO2012 a successful reality. Once ready, the team will travel to Shodoshima, the island on which kohai and sempai will come together for a week to question learning for a second time. 
+      %br
+      %p We are looking for inspiring college students and graduate school students to join our team for our journey! Application will be open until December 6th, and there will be an interview either on Skype or in person. Our decisions will be announced by December 20th. 
+      %h2 Deadline : December 6th  /  Results  : December 20th
       %a{:href => "https://docs.google.com/spreadsheet/viewform?formkey=dFZ3clBVMVFsLXhHeUVCTm51NGY0aWc6MQ"}
-        %h2 APPLICATION
+        %h2 APPLY HERE NOW! 
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/bootstrap.min.js", :type => "text/javascript"}
   %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
