--- a/views/index.haml
+++ b/views/index.haml
@@ -50,7 +50,7 @@
 
       #gakko2012.asubcont.hide
         %h2 GAKKO 2012 in NAOSHIMA, JAPAN
-        %p In the summer of 2012, GAKKO launched its inaugural camp on NAOSHIMA Island in Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and conduct a school from scratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place in the beginning of August on Naoshima. Kohai and sempai have remained in close contact since our emotional closing ceremony at the end of the week. We can only hope that the magic of the first year will return to us next summer!. 
+        %p In the summer of 2012, GAKKO launched its inaugural camp on NAOSHIMA Island in Japan. 12 students from Yale and Harvard traveled to Japan for 3 weeks to design and conduct a school from scratch. GAKKO invited 30 high school students from 6 countries to participate in the first GAKKO camp which took place in the beginning of August on Naoshima. Kohai and sempai have remained in close contact since our emotional closing ceremony at the end of the week. We can only hope that the magic of the first year will return to us next summer! 
       %br
       %a#previous.button{:href => "#about"}
         %i.icon-arrow-left
