--- a/views/index.haml
+++ b/views/index.haml
@@ -63,7 +63,7 @@
     .content
       %h1 GAKKO 2013 APPLICATION
       %h2 GAKKO 2013 : 7/24 - 8/10 in JAPAN 
-      %p This team for GAKKO 2013 will gather together in Tokyo for two weeks of program preparation on 7/24. During this time, the curiculum will be sharpened, activities will be hammered out, meetings with sponsors and guest teachers will take place. Above all, these two weeks are a time for the team to develop into the well-oiled machine that made GAKKO2012 a successful reality. Once ready, the team will travel to Shodoshima, the island on which kohai and sempai will come together for a week to question learning for a second time. 
+      %p This team for GAKKO 2013 will gather together in Tokyo for two weeks of program preparation on 7/24. During this time, the curriculum will be sharpened, activities will be hammered out, meetings with sponsors and guest teachers will take place. Above all, these two weeks are a time for the team to develop into the well-oiled machine that made GAKKO 2012 a successful reality. Once ready, the team will travel to Shodoshima, the island on which kohai and sempai will come together for a week to question learning for a second time. 
       %br
       %p We are looking for inspiring college students and graduate school students to join our team for our journey! Application will be open until December 6th, and there will be an interview either on Skype or in person. Our decisions will be announced by December 20th. 
       %h2 Deadline : December 6th  /  Results  : December 20th
