changed twitter account to gakkoproject

--- a/views/index.haml
+++ b/views/index.haml
@@ -38,7 +38,7 @@
     #news
       %h1
         %em.handle
-          Follow @GAKKO2012 on twitter:
+          Follow @GAKKOPROJECT on twitter:
         .tweet
   #about.panel
     .content
