--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@
     #menu
       %a#home-logo{:href => "#home"}
         %img{:src => "img/titlelogo2.png", :height => "20px", :width => "75px"}
-      %a#twitter-link{:href => "http://twitter.com/gakko2012"}
+      %a#twitter-link{:href => "http://twitter.com/gakkoproject"}
         %img{:src => "img/twitter.png"}
       %a#facebook-link{:href => "http://facebook.com/gakkoproject"}
         %img{:src => "img/facebook.png"}
