--- a/views/index_old.haml
+++ b/views/index_old.haml
@@ -1,18 +1,18 @@
 .navbar
   #menu
     %a#home-logo{:href => "#home"}
-      %img{:src => "img/titlelogo2.png", :height => "20px", :width => "75px"}
+      %img{:src => "images/titlelogo2.png", :height => "20px", :width => "75px"}
     %a#twitter-link{:href => "http://twitter.com/gakkoproject"}
-      %img{:src => "img/twitter.png"}
+      %img{:src => "images/twitter.png"}
     %a#facebook-link{:href => "http://facebook.com/gakkoproject"}
-      %img{:src => "img/facebook.png"}
+      %img{:src => "images/facebook.png"}
     %a#apply-link{:href => "#apply"} APPLY
     %a#about-link{:href => "#about"} ABOUT
     %a#home-link{:href => "#home"} HOME
 
 %header#home
   %hgroup
-    %img#logo{:src => "img/logohover.png"}
+    %img#logo{:src => "images/logohover.png"}
   #mc_embed_signup
     %form.validate{:action => "/signup"}
       #success{:style => "display:none"} Thank you for your signup!
@@ -33,7 +33,7 @@
 #about.panel
   .content
     .subcont
-      %img.minilogo{:src => "img/minilogo.png"}
+      %img.minilogo{:src => "images/minilogo.png"}
     #concept.asubcont
       %h2 RE-EXAMINING EDUCATION
       %p GAKKO is a summer project that brings together creative college students from around the world to design and conduct a week-long school in Japan. Through GAKKO we are trying to question the current paradigm of education and suggest a new approach to learning. We think school should be a more creative, motivating, and inspiring place where people are happy to learn and engaged in teaching. We want the world to know that we care about education; at GAKKO we question learning. 
