--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,17 +3,16 @@
   %title GAKKO
   %meta{:charset => "utf-8"}
   %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
-  %link{:rel => "stylesheet", :href => "/css/normalize.css"}
-  %link{:rel => "stylesheet", :href => "/css/vendor/bootstrap.min.css"}
-  %link{:rel => "stylesheet", :href => "/css/main.css"}
-  %script{:src => "/js/vendor/modernizr-2.6.2.min.js"}
+  %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
+  %link{:rel => "stylesheet", :href => "/sass/style.css"}
 
 %body
   = yield
 
   %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
   %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
-  %script{:src => "/js/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
-  %script{:src => "/js/vendor/jquery.tweet.js", :type => "text/javascript"}
-  %script{:src => "/js/plugins.js", :type => "text/javascript"}
-  %script{:src => "/js/index.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/plugins.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/index.js", :type => "text/javascript"}
+  %script{:src => "/coffee/main.js", :type => "text/javascript"}
