--- a/views/stylesheets/style_old.scss
+++ b/views/stylesheets/style_old.scss
@@ -7,6 +7,12 @@ body {
   overflow: hidden;
 }
 
+body {
+  a {
+    color: red;
+  }
+}
+
 .shadow {
    -moz-box-shadow:    inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
@@ -163,7 +169,7 @@ input, textarea {
   border-radius: 5px;
   width: 50px;
   height: 40px;
-  background: #9e8f88 url('../img/right.png') center no-repeat; 
+  background: #9e8f88 url('/images/right.png') center no-repeat; 
   border: none;
 }
 
