--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,16 +3,18 @@
   %title GAKKO
   %meta{:charset => "utf-8"}
   %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
-  %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
-  %link{:rel => "stylesheet", :href => "/sass/style.css"}
+  %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
+  -# %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
+  %link{:rel => "stylesheet", :href => "/less/style.css"}/
 
 %body
-  = yield
+  #wrapper
+    = yield
 
   %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
   %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
   %script{:src => "/javascripts/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
-  %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
-  %script{:src => "/javascripts/plugins.js", :type => "text/javascript"}
-  %script{:src => "/javascripts/index.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
+  -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
+  -# %script{:src => "/javascripts/index.js", :type => "text/javascript"}
   %script{:src => "/coffee/main.js", :type => "text/javascript"}
