background image panels

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,8 @@
-#home.panel
-  %img.logo{:src => "/images/logo.png"}
-  %img.logo.transparent{:src => "/images/logohover.png"}
+#home.panel.img
+  %img.logo{:src => "/images/logos/logo.png"}
+  %img.logo.transparent{:src => "/images/logos/logohover.png"}
 
+= haml :about
+= haml :team
 = haml :about
 = haml :team
