--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,7 +5,7 @@
   %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
   %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
   -# %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
-  %link{:rel => "stylesheet", :href => "/less/style.css"}/
+  %link{:rel => "stylesheet", :href => "/styles"}/
 
 %body
   #wrapper
@@ -17,4 +17,4 @@
   %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
   -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
   -# %script{:src => "/javascripts/index.js", :type => "text/javascript"}
-  %script{:src => "/coffee/main.js", :type => "text/javascript"}
+  %script{:src => "/scripts", :type => "text/javascript"}
