--- a/views/less/style.less
+++ b/views/less/style.less
@@ -9,6 +9,10 @@
   opacity: 0;
 }
 
+.hide {
+  display: none;
+}
+
 /* Overarching styles */
 
 html, body, #wrapper, .panel {
@@ -21,58 +25,55 @@ body {
   font-size: @font;
   line-height: @lineHeight;
   color: black;
-  //overflow: hidden;
+  background-image: url(/images/backgrounds/background2000.jpg);
+  background-size: cover;
+  background-position: 0% 80%;
+  background-attachment: fixed;
 }
 
 #wrapper {
   min-width: 960px;
 }
 
+// .back {
+//   z-index: -100;
+//   height: 100%;
+//   width: 100%;
+//   &.one {
+//     background-image: url(/images/backgrounds/background2000.jpg);
+//     background-position: 0% 80%;
+//   }
+//   &.two {
+//     background-image: url(/images/backgrounds/about2000.jpg);
+//     background-position: 0% 80%;
+//   }
+//   &.three {
+//     background-image: url(/images/backgrounds/connect_small.jpg);
+//   }
+//   background-size: cover;
+//   background-attachment: fixed;
+// }
+
 .panel {
-  background-size: cover;
-  background-position: 0% 80%;
+  height: 110%;
+  &.img {
+    background-color: transparent;
+  }
+  &.txt {
+    background-image: url(/images/backgrounds/creampaper.png);
+    background-repeat: repeat;
+  }
   position: relative;
   overflow: hidden;
 }
 
-#home {
-  background-image: url(/images/background2000.jpg)
-}
-#about {
-  background-image: url(/images/about2000.jpg)
-}
-#team {
-  background-image: url(/images/team2000.jpg)
-}
-#apply {
-  background-image: url(/images/apply2000.jpg)
-}
-
+@import "./index.less";
+@import "./about.less";
+@import "./team.less";
 /* Index page */
 
-.logo {
-  .transition(opacity, 2s);
+#marker {
   position: absolute;
-  top: 35%;
-  left: 15%;
-  max-height: 24%;
-  max-width: 50%;
-  .transparent {
-    z-index: -1;
-  }
+  top: 0;
+  left: 50%;
 }
-
-/* About page */
-@contentSize: 300px;
-
-.about-content {
-  position: absolute;
-  top: 20px;
-  left: 100px;
-  height: @contentSize;
-  width: @contentSize;
-  .rounded(@contentSize);
-  padding: @contentSize / 4;
-  background-color: rgba(255,255,255,0.9);
-}
-
