--- a/views/index.haml
+++ b/views/index.haml
@@ -6,3 +6,13 @@
 = haml :team
 = haml :about
 = haml :team
+
+-#
+  :plain
+  <svg id="nav2">
+    <path d="M 50,0 S 150,0 150,100" stroke-width="10" stroke="#AC1433" />
+  </svg>
+  <svg id="nav">
+    <circle class="outer" cx="50" cy="50" r="50" fill="#AC1433" />
+    <circle class="inner" cx="50" cy="40" r="30" fill="white" />
+  </svg>
