--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,7 @@
   %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
   %script{:src => "/javascripts/vendor/jquery.backstretch.min.js", :type => "text/javascript"}
   %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
+  %script{:src=>"http://d3js.org/d3.v2.js" }
   -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
   -# %script{:src => "/javascripts/index.js", :type => "text/javascript"}
   %script{:src => "/scripts", :type => "text/javascript"}
