--- a/views/less/style.less
+++ b/views/less/style.less
@@ -35,6 +35,26 @@ body {
   min-width: 960px;
 }
 
+#nav {
+  position: fixed;
+  width: 200px;
+  height: 150px;
+  left: 50%;
+  margin-top: -30px;
+  margin-left: -100px;
+  top: 0;
+}
+
+#nav2 {
+  position: fixed;
+  width: 200px;
+  height: 150px;
+  left: 70%;
+  top: 0;
+  margin-top: -30px;
+  margin-left: -100px;
+}
+
 // .back {
 //   z-index: -100;
 //   height: 100%;
