--- a/views/less/style.less
+++ b/views/less/style.less
@@ -35,24 +35,26 @@ body {
   min-width: 960px;
 }
 
+@width: 400px;
 #nav {
   position: fixed;
-  width: 200px;
-  height: 150px;
+  width: @width;
+  height: @width/2;
   left: 50%;
-  margin-top: -30px;
-  margin-left: -100px;
+  margin-left: -1*@width / 2;
   top: 0;
 }
 
-#nav2 {
+#nav-help {
   position: fixed;
-  width: 200px;
-  height: 150px;
-  left: 70%;
   top: 0;
-  margin-top: -30px;
-  margin-left: -100px;
+  left: 65%;
+  width: 400px;
+}
+
+#nav-hide {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 // .back {
